--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
   "name": "text-calc",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config=config/webpack.dev.js",
+    "start": "webpack serve --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.prod.js",
+    "format": "prettier --write \"src/**/*.{js,scss}\" \"config/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "pan-tom",
   "license": "MIT",
   "private": true,
+  "engines": {
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.2.2",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.10.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-flexbugs-fixes": "^4.2.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-safe-parser": "^4.0.2",
-    "resolve-url-loader": "^3.1.1",
-    "sass-loader": "^10.0.1",
-    "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^4.1.0",
-    "v": "^0.3.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "@babel/core": "^7.25.0",
+    "@babel/plugin-transform-runtime": "^7.25.0",
+    "@babel/preset-env": "^7.25.0",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "detect-port": "^1.5.1",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^11.0.1",
+    "prettier": "^3.3.3",
+    "sass": "^1.80.0",
+    "sass-loader": "^16.0.1",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.11",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.2",
-    "autosize": "^4.0.2",
-    "core-js": "^3.6.5"
+    "@babel/runtime": "^7.25.0"
   }
 }
