--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack serve --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.prod.js",
-    "format": "prettier --write \"src/**/*.{js,scss}\" \"config/**/*.js\"",
+    "format": "prettier --write \"src/**/*.{ts,scss}\" \"config/**/*.js\"",
+    "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "pan-tom",
@@ -20,10 +21,12 @@
     "@babel/core": "^7.25.0",
     "@babel/plugin-transform-runtime": "^7.25.0",
     "@babel/preset-env": "^7.25.0",
+    "@types/node": "^22.19.6",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "detect-port": "^1.5.1",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -34,6 +37,8 @@
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.11",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
     "webpack": "^5.95.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.1.0"
