feat: add comprehensive test suite and modernize project
- Add Vitest testing framework with jsdom environment
- Add unit tests for calculator, storage, and exampleTextGenerator (21 tests, 100% coverage)
- Update dependencies to latest versions:
  - @types/node: 22.19.6 → 25.0.9
  - vitest: 2.1.9 → 4.0.17
  - @vitest/ui: 2.1.9 → 4.0.17
  - @vitest/coverage-v8: added
  - detect-port: 1.6.1 → 2.1.0
  - postcss-preset-env: 11.0.1 → 11.1.1
  - prettier: 3.7.4 → 3.8.0
- Convert webpack, babel, and postcss configs to ESM syntax
- Move @babel/runtime from dependencies to devDependencies
- Improve index.html with comprehensive meta tags (Open Graph, Twitter Cards, SEO)
- Update README with testing documentation and project structure
- Fix calculator.ts to use non-null assertion for RegExpMatchArray.index
- Add coverage directory to .gitignore

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.5.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "webpack serve --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.prod.js",
     "format": "prettier --write \"src/**/*.{ts,scss}\" \"config/**/*.js\"",
     "type-check": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "author": "pan-tom",
   "license": "MIT",
@@ -21,29 +24,31 @@
     "@babel/core": "^7.25.0",
     "@babel/plugin-transform-runtime": "^7.25.0",
     "@babel/preset-env": "^7.25.0",
-    "@types/node": "^22.19.6",
+    "@types/node": "^25.0.9",
+    "@vitest/ui": "^4.0.17",
+    "@vitest/coverage-v8": "^4.0.17",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "detect-port": "^1.5.1",
+    "detect-port": "^2.1.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.6.0",
+    "jsdom": "^27.4.0",
     "mini-css-extract-plugin": "^2.9.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^8.1.1",
-    "postcss-preset-env": "^11.0.1",
-    "prettier": "^3.3.3",
+    "postcss-preset-env": "^11.1.1",
+    "prettier": "^3.8.0",
     "sass": "^1.80.0",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.11",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
+    "vitest": "^4.0.17",
     "webpack": "^5.95.0",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.1.0"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^5.1.0",
     "@babel/runtime": "^7.25.0"
   }
 }
